manifests/mlflow/base/mlflow-route.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  labels:
    app.kubernetes.io/name: mlflow
  annotations:
    openshift.io/host.generated: 'true'
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"

spec:
  to:
    kind: Service
    name: mlflow
    weight: 100
  port:
    targetPort: 5000
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
  # path: /
  # pathType: ImplementationSpecific      

# spec:
#   tls:
#     - hosts:
#       - $(MLFLOW_HOST)

#   rules:
#   - host: $(MLFLOW_HOST)
#     http:
#       paths:
#       - backend:
#           service:
#             name: mlflow
#             port:
#               number: 5000
#         path: /
#         pathType: ImplementationSpecific      


# ---
# kind: Route
# apiVersion: route.openshift.io/v1
# metadata:
#   annotations:
#     openshift.io/host.generated: 'true'
#   name: mlflow
#   labels:
#     app: mlflow
# spec:
#   to:
#     kind: Service
#     name: mlflow
#     weight: 100
#   port:
#     targetPort: 5000
#   tls:
#     termination: edge
#     insecureEdgeTerminationPolicy: None
#   wildcardPolicy: None
